--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,8 @@
         <include layout="@layout/top_nav" />
         <include layout="@layout/movie_info"/>
         <include layout="@layout/date_selection"/>
-        <include layout="@layout/cinema_time"/>
+        <include layout="@layout/cinema_list"/>
+
     </LinearLayout>
 
     <android.support.design.widget.FloatingActionButton
