--- a/app/src/main/res/layout/cinema_time.xml
+++ b/app/src/main/res/layout/cinema_time.xml
@@ -6,7 +6,7 @@
     android:gravity="center"
     android:orientation="vertical"
     android:id="@+id/show_time_container"
-    android:layout_marginVertical="20dp">
+    android:layout_marginTop="20dp">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
