--- a/app/src/main/res/layout/date_selection.xml
+++ b/app/src/main/res/layout/date_selection.xml
@@ -6,7 +6,8 @@
     android:layout_height="wrap_content"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".MainActivity"
-    tools:showIn="@layout/activity_main">
+    tools:showIn="@layout/activity_main"
+    android:paddingBottom="10dp">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/date_selection"
