--- a/app/src/main/res/layout/top_nav.xml
+++ b/app/src/main/res/layout/top_nav.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="50dp"
     android:layout_width="match_parent">
-    <ImageView
+    <ImageButton
         android:layout_width="35dp"
         android:layout_height="25dp"
         android:background="@drawable/back_icon_white"
